--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,13 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sweetalert2": "^11.14.2",
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.0-rc.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "daisyui": "^4.12.13",
     "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.10"
   }
