--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "form-data": "^4.0.1",
     "formik": "^2.4.6",
     "gsap": "^3.12.5",
     "notistack": "^3.0.1",
@@ -19,6 +20,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.0",
     "sweetalert2": "^11.14.2",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.0-rc.2"
